update_laydsphim
